--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
     "sass": "^1.42.1"
+  },
+  "dependencies": {
+    "mixitup": "^3.3.1"
   }
 }
